@@ -6,7 +6,8 @@ ifneq (,$(findstring $(DEB_BUILD_ARCH), amd64 i386 ia64 mips mipsel powerpc))
 export NUMA=1
 endif
 
-DH = dh --with dkms
+DH_SEQUENCE = $@
+DH = dh $(DH_SEQUENCE) --with dkms
 
 build-arch: build-arch-stamp
 build-indep:
@@ -14,16 +15,17 @@ build: build-arch build-indep
 
 install: build install-stamp
 
+build-arch-stamp install-stamp: DH_SEQUENCE = ${@:-stamp=}
 build-arch-stamp install-stamp:
-	$(DH) ${@:-stamp=}
+	$(DH)
 	touch $@
 
 binary-arch binary-indep: install
-	$(DH) $@
+	$(DH)
 
 binary: binary-arch binary-indep
 
 clean:
-	$(DH) $@
+	$(DH)
 
 .PHONY: build-arch build-indep build clean install binary-indep binary-arch binary 
